[package]
name = "pga_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.41"
mimalloc = { version = "0.1.48", features = ["no_thp", "override", "v3"] }
pingora = { version = "0.6.0", features = ["lb"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }

[profile.dev]
debug = 0
debug-assertions = true
incremental = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
debug = 0
debug-assertions = false
incremental = false
